--- a/css/main.css
+++ b/css/main.css
@@ -80,15 +80,32 @@ section#home {
 
 }
 .p{
-  font-size: 2rem;
+  font-size: 1.8rem;
   padding-left: 40mm;
   color:#7F7F7F;
   font-family: 'Poppins', sans-serif;
 
 }
 .but{
-  padding-left: 40mm;
+  margin-top: 5cm;
+  margin-left: 4cm;
+  text-decoration: none;
+    padding: 22px;
+    padding-left: 80px;
+    padding-right: 80px;
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    letter-spacing: 3px;
+    color: white;
+    background-color: #6DC1F3;
+    border-radius: 36px;
+    border: 3px double #6DC1F3;
 
+}
+.but:hover{
+  opacity: 0.6;
+  text-decoration: none;
 }
 
 section#service {
@@ -116,17 +133,106 @@ section#contact {
   
   }
   .np{
-    font-size: 4rem;
+    font-size: 3rem;
     padding-left: 40mm;
   
   }
   .p{
-    font-size: 2rem;
+    font-size: 1.9rem;
     padding-left: 0mm;
   
   }
   .but{
+    margin-top: 1cm;
+    margin-left: 1cm;
+    padding: 18px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 30px;
+    width: 80%;
+    
+    
+  }
+
+  
+
+}
+@media screen and (max-width: 1408px){
+  #pantalla-dividida {
+      flex-direction: row-reverse;
+      
+  }
+  .izquierda {
+    background: url(/img/ines-alvarez-fdez-L_N7BaNLC5Y-unsplash.png);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    width: 50%;
+  }
+  .derecha {
+    
+  
+  }
+  .np{
+    font-size: 3rem;
+    padding-left: 40mm;
+  
+  }
+  .p{
+    font-size: 1.9rem;
     padding-left: 0mm;
+  
+  }
+  .but{
+    margin-top: 1cm;
+    margin-left: 1cm;
+    padding: 18px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 30px;
+    width: 80%;
+    
+    
+  }
+
+  
+
+}
+@media screen and (max-width: 1408px){
+  #pantalla-dividida {
+      flex-direction: row-reverse;
+      
+  }
+  .izquierda {
+    background: url(/img/ines-alvarez-fdez-L_N7BaNLC5Y-unsplash.png);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    width: 50%;
+  }
+  .derecha {
+    
+  
+  }
+  .np{
+    font-size: 3rem;
+    padding-left: 40mm;
+  
+  }
+  .p{
+    font-size: 1.9rem;
+    padding-left: 0mm;
+  
+  }
+  .but{
+    margin-top: 1cm;
+    margin-left: 1cm;
+    padding: 18px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 30px;
+    width: 80%;
+    
     
   }
 
@@ -159,7 +265,13 @@ section#contact {
 
 }
 .but{
-  padding-left: 0mm;
+  margin-top: 1cm;
+    margin-left: 1cm;
+    padding: 18px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 30px;
+    width: 80%;
   
 }
 }
@@ -179,19 +291,60 @@ section#contact {
 
 }
 .np{
-  font-size: 3rem;
+  font-size: 2.5rem;
   padding-left: 20mm;
 
 }
 .p{
-  font-size: 2rem;
+  font-size: 1.9rem;
   padding-left: 0mm;
 
 }
 .but{
-  padding-left: 0mm;
+  margin-top: 0cm;
+    margin-left: 1cm;
+    padding: 18px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 30px;
+    width: 80%;
 }
   
+}
+@media screen and (max-width: 640px) {
+  #pantalla-dividida {
+    flex-direction: row-reverse; 
+}
+.izquierda {
+  background: url(/img/ines-alvarez-fdez-L_N7BaNLC5Y-unsplash.png);
+  background-size: cover;
+  background-position: 72vh;
+  
+}
+.derecha {
+  
+
+}
+.np{
+  font-size: 2rem;
+  padding-left: 12mm;
+
+}
+.p{
+  font-size: 1.7rem;
+  padding-left: 0mm;
+
+}
+.but{
+  margin-top: 0cm;
+    margin-left: 1cm;
+    padding: 18px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 30px;
+    width: 80%;
+  
+}
 }
 @media screen and (max-width: 555px) {
   #pantalla-dividida {
@@ -213,12 +366,18 @@ section#contact {
 
 }
 .p{
-  font-size: 2rem;
+  font-size: 1.5rem;
   padding-left: 0mm;
 
 }
 .but{
-  padding-left: 0mm;
+  margin-top: 1cm;
+    margin-left: 1cm;
+    padding: 18px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 30px;
+    width: 80%;
   
 }
 }
@@ -247,7 +406,13 @@ section#contact {
 
 }
 .but{
-  padding-left: 0mm;
+  margin-top: 1cm;
+    margin-left: 1cm;
+    padding: 18px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 30px;
+    width: 80%;
   
 }
 }
@@ -276,11 +441,18 @@ section#contact {
 
 }
 .but{
-  padding-left: 0mm;
+  margin-top: 1cm;
+    margin-left: 0cm;
+    padding: 18px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 30px;
+    width: 100%;;
   
 }
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (max-width: 360px) {
   #pantalla-dividida {
     flex-direction: row-reverse; 
 }
@@ -305,7 +477,127 @@ section#contact {
 
 }
 .but{
+  margin-top: 1cm;
+  margin-left: 0cm;
+  padding: 18px;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 20px;
+  width: 100%;;
+  
+}
+.lead {
+  font-size: 1.2rem;
+}
+}
+@media screen and (max-width: 411px) {
+  #pantalla-dividida {
+    flex-direction: row-reverse; 
+}
+.izquierda {
+  background: url(/img/ines-alvarez-fdez-L_N7BaNLC5Y-unsplash.png);
+  background-size: cover;
+  background-position: 72vh;
+  
+}
+.derecha {
+  
+
+}
+.np{
+  font-size: 1.5rem;
   padding-left: 0mm;
+
+}
+.p{
+  font-size: 1rem;
+  padding-left: 0mm;
+
+}
+.but{
+  margin-top: 1cm;
+  margin-left: 0cm;
+  padding: 18px;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 20px;
+  width: 100%;;
+  
+}
+.lead {
+  font-size: 1.2rem;
+}
+}
+@media screen and (max-width: 414px) {
+  #pantalla-dividida {
+    flex-direction: row-reverse; 
+}
+.izquierda {
+  background: url(/img/ines-alvarez-fdez-L_N7BaNLC5Y-unsplash.png);
+  background-size: cover;
+  background-position: 72vh;
+  
+}
+.derecha {
+  
+
+}
+.np{
+  font-size: 1.5rem;
+  padding-left: 0mm;
+
+}
+.p{
+  font-size: 1rem;
+  padding-left: 0mm;
+
+}
+.but{
+  margin-top: 0.5cm;
+  margin-left: 0cm;
+  padding: 18px;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 20px;
+  width: 95%;;
+  
+}
+.lead {
+  font-size: 1.2rem;
+}
+}
+@media screen and (max-width: 540px) {
+  #pantalla-dividida {
+    flex-direction: row-reverse; 
+}
+.izquierda {
+  background: url(/img/ines-alvarez-fdez-L_N7BaNLC5Y-unsplash.png);
+  background-size: cover;
+  background-position: 72vh;
+  
+}
+.derecha {
+  
+
+}
+.np{
+  font-size: 1.5rem;
+  padding-left: 0mm;
+
+}
+.p{
+  font-size: 1rem;
+  padding-left: 0mm;
+
+}
+.but{
+  margin-top: 0.5cm;
+  margin-left: 0cm;
+  padding: 18px;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 20px;
+  width: 95%;;
   
 }
 .lead {
