--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 
-
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   padding: 0;
@@ -21,7 +23,8 @@ body {
 }
 
 .lead {
-  font-size: 1.5rem;
+  padding-bottom: 8cm;
+  font-size: 1.2rem;
   font-weight: 600;
   color: #F4F4F4;
 }
@@ -153,6 +156,9 @@ section#home {
   opacity: 0.6;
   text-decoration: none;
 }
+.wh3{
+  margin-bottom: 0cm;
+}
 
 section#service {
   background: url('https://source.unsplash.com/K2tdx2mFDHc/1600x900') no-repeat center center/cover;;
@@ -161,6 +167,62 @@ section#service {
 section#contact {
   background: url('https://source.unsplash.com/2aAHlfDOhJM/1600x900') no-repeat center center/cover;;
 }
+
+
+.btn {
+  height: 80px;
+  line-height: 80px;  
+  width: 80px;  
+  font-size: 2em;
+  font-weight: bold;
+  border-radius: 50%;
+  background-color: #6DC1F3;
+  color: white;
+  text-align: center;
+  cursor: pointer;
+}
+
+
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding in columns */
+.row {margin: 0 -5px;
+margin-left: 10cm;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+
+/* Responsive columns - one column layout (vertical) on small screens */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+  .row {margin: 0 -5px;
+    }
+  
+}
+
+
 
 @media screen and (max-width: 1286px){
   #pantalla-dividida {
@@ -181,6 +243,7 @@ section#contact {
     height: 100vh;
     width: 50%;
   }
+  
   .derecha, .derecha2 {
     
   
@@ -446,6 +509,7 @@ section#contact {
   
 
 }
+
 .derecha {
   
 
@@ -531,6 +595,27 @@ section#contact {
     padding-right: 30px;
     font-size: 30px;
     width: 80%;
+  
+}
+.np2{
+  font-size:  2rem;
+  padding-left: 10%;
+
+}
+.p2{
+  font-size: 1.2rem;
+  padding-left: 10%;
+
+}
+.but2{
+  margin-top: cm;
+  margin-left: 1cm;
+  padding: 18px;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 19px;
+  width: 80%;
+  
   
 }
 }
